<resources>
    <string name="app_name">Final_Project</string>

    <string name="forgetPassword"><u>Quên mật khẩu</u></string>
    <string name="signup"><u>Đăng kí tại đây</u></string>

    <string name="home">Trang chủ</string>
    <string name="product_category">Loại sản phẩm</string>
    <string name="favourite">Yêu thích</string>
    <string name="voucher">Khuyến mãi</string>
    <string name="history">Lịch sử mua</string>

    <string name="Account">Tài khoản</string>
    <string name="Profile">My profile</string>
    <string name="log_out">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawablePadding">10dp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>