<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_product"
            android:title="@string/product_category"
            android:icon="@drawable/ic_product"/>

        <item android:id="@+id/nav_favourite"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favorite"/>

        <item android:id="@+id/nav_voucher"
        android:title="@string/voucher"
        android:icon="@drawable/ic_voucher"/>

        <item android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>
    </group>

    <item android:title="@string/Account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/Profile"
                android:icon="@drawable/ic_profile"/>

            <item android:id="@+id/nav_log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_log_out"/>
        </menu>

    </item>
</menu>